RESOLVED FIXED283619
Fix !ENABLE(VARIATION_FONTS) build following 286978@main
https://bugs.webkit.org/show_bug.cgi?id=283619
Summary Fix !ENABLE(VARIATION_FONTS) build following 286978@main
Ross Kirsling
Reported 2024-11-22 21:00:18 PST
.
Attachments
Ross Kirsling
Comment 1 2024-11-22 21:03:32 PST
EWS
Comment 2 2024-11-22 21:06:21 PST
Committed 286998@main (8a115457bdf8): <https://commits.webkit.org/286998@main> Reviewed commits have been landed. Closing PR #37073 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-11-22 21:07:13 PST
Note You need to log in before you can comment on or make changes to this bug.