Fix !ENABLE(VARIATION_FONTS) build following 286978@main https://bugs.webkit.org/show_bug.cgi?id=283619

Unreviewed build fix.

* Source/WebCore/css/parser/CSSPropertyParserConsumer+Font.cpp:
(WebCore::CSSPropertyParserHelpers::consumeFontWeightNumberUnresolved):
Get value from optional correctly.

Canonical link: https://commits.webkit.org/286998@main